# 6502-constexpr

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang_format.cmake  setup.cmake
examples/: CMakeLists.txt  fib.a65  fib.cpp
scripts/: asm2arr.py  example.a65
src/: CMakeLists.txt  bit.h  common.h  core.h  cpu.h  main.cpp
tests/: CMakeLists.txt  cpu.cpp  memory.cpp  test.h
